data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4180.wast
;; 9. **Test Description**: Design a loop where `call_indirect` is used to select a function that determines the flow of the loop using a `br_table` instruction based on the return value of the function called. The loop should end after a number of specific transitions.    - **Constraint Being Checked**: Accurate return value handling from an indirect call affecting control flow transitions.    - **Relation to Infinite Loops**: Incorrect value propagation causes the `br_table` to continuously route to the same loop iteration, causing infinite loops.

(assert_invalid
  (module
    (type (func (result i32)))
    (func $zero (result i32) (i32.const 0))
    (func $one (result i32) (i32.const 1))
    (table 2 funcref)
    (elem (i32.const 0) $zero $one)
    (func (param i32) (result i32)
      (local.get 0)
      (call_indirect (type 0) (local.get 0))
      (br_table 1 0)
    )
  )
  "type mismatch"
)